--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "postpack": "ember ts:clean"
   },
   "dependencies": {
+    "ember-auto-import": "^2.4.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-htmlbars": "^6.0.1",
-    "ember-cli-typescript": "^5.1.0"
+    "ember-cli-typescript": "^5.1.0",
+    "ember-get-config": "^2.0.0",
+    "plotly.js": "2.11.0",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
@@ -58,17 +62,18 @@
     "@types/ember__test-helpers": "^2.6.1",
     "@types/ember__utils": "^4.0.0",
     "@types/htmlbars-inline-precompile": "^3.0.0",
+    "@types/plotly.js": "^1.54.20",
     "@types/qunit": "^2.11.3",
     "@types/rsvp": "^4.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^2.4.0",
     "ember-cli": "~4.2.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-cli-typescript-blueprints": "^3.0.0",
+    "ember-deep-tracked": "^1.3.11",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.2",
@@ -92,6 +97,9 @@
     "qunit-dom": "^2.0.0",
     "typescript": "^4.6.4",
     "webpack": "^5.69.1"
+  },
+  "peerDependencies": {
+    "plotly.js": "2.*"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
