--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
     "moduleResolution": "node",
 
     // Trying to check Ember apps and addons with `allowJs: true` is a recipe
-    // for many unresolveable type errors, because with *considerable* extra
+    // for many unresolvable type errors, because with *considerable* extra
     // configuration it ends up including many files which are *not* valid and
     // cannot be: they *appear* to be resolve-able to TS, but are in fact not in
-    // valid Node-resolveable locations and may not have TS-ready types. This
+    // valid Node-resolvable locations and may not have TS-ready types. This
     // will likely improve over time
     "allowJs": false,
 
@@ -27,8 +27,8 @@
     // consumers; but leaving them off is still preferred when possible, since
     // it makes it easier to switch between apps and addons and have the same
     // rules for what can be imported and how.
-    "allowSyntheticDefaultImports": false,
-    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
 
     // --- Lint-style rules
 
@@ -41,14 +41,14 @@
     // Setting `noEmitOnError` here allows ember-cli-typescript to catch errors
     // and inject them into Ember CLI's build error reporting, which provides
     // nice feedback for when
-    "noEmitOnError": true,
+    "noEmitOnError": false,
 
     // We use Babel for emitting runtime code, because it's very important that
     // we always and only use the same transpiler for non-stable features, in
     // particular decorators. If you were to change this to `true`, it could
     // lead to accidentally generating code with `tsc` instead of Babel, and
     // could thereby result in broken code at runtime.
-    "noEmit": true,
+    "noEmit": false,
 
     // Ember makes heavy use of decorators; TS does not support them at all
     // without this flag.
@@ -62,7 +62,7 @@
     "inlineSources": true,
 
     // The combination of `baseUrl` with `paths` allows Ember's classic package
-    // layout, which is not resolveable with the Node resolution algorithm, to
+    // layout, which is not resolvable with the Node resolution algorithm, to
     // work with TypeScript.
     "baseUrl": ".",
     "paths": {
