--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,15 @@ on:
     branches:
       - main
       - master
+      - jacobq/*
   pull_request: {}
 
 concurrency:
    group: ci-${{ github.head_ref || github.ref }}
    cancel-in-progress: true
+
+env:
+  NODE_VERSION: '18.x'
 
 jobs:
   test:
@@ -21,7 +25,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: '${{ env.NODE_VERSION }}'
           cache: yarn
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
@@ -38,7 +42,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: '${{ env.NODE_VERSION }}'
           cache: yarn
       - name: Install Dependencies
         run: yarn install --no-lockfile
@@ -68,7 +72,7 @@ jobs:
       - name: Install Node
         uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: '${{ env.NODE_VERSION }}'
           cache: yarn
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
